--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,35 +12,40 @@
   align-items: center;
 }
 
-.lable{
-    display: none;
+.lable {
+  display: none;
 }
 
 .title {
-    font-weight: 800;font-size: 65px;
+  font-weight: 800;
+  font-size: 35px;
   display: flex;
   justify-content: center;
+  text-transform: uppercase;
+
 }
 .txt {
-    font-size: 32px;
+  font-size: 26px;
   display: flex;
   justify-content: center;
 }
 
 .form {
-    margin: 0;padding: 0;
-    background-color: #af3131;
+  padding: 20px;
+  /* border-radius: 5px;
+    background-color: #e9dbdb; */
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   gap: 20px;
 }
 
 .input {
   width: 350px;
   height: 40px;
-padding: 0px 20px;  margin-top: 10px;
+  padding: 0px 20px;
+  margin-top: 10px;
   font-size: 16px;
   border: 1px solid #997917;
   border-radius: 5px;
@@ -48,7 +53,7 @@ padding: 0px 20px;  margin-top: 10px;
 }
 
 .btn {
-  height: 38px;
+  height: 40px;
   padding: 5px 15px;
   border-radius: 5px;
   cursor: pointer;
