--- a/src/App.module.css
+++ b/src/App.module.css
@@ -67,3 +67,10 @@
   border: 1px solid rgb(121, 210, 242);
   background-color: rgb(121, 210, 242);
 }
+
+.message {
+  min-height: 80px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
