--- a/src/Pages/HomePage/home-page.module.css
+++ b/src/Pages/HomePage/home-page.module.css
@@ -1,8 +1,34 @@
-.section{
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  flex-grow: 8;
+  background-color: rgb(129, 182, 182);
+}
+
+
+.title{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
+}
+.nav{
+    padding: 25px 8px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    flex-grow: 8;
-    background-color: rgb(129, 182, 182);
+    justify-content: space-around;
+    align-items: stretch;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+.button{
+    padding: 5px 20px;
+    border: none;
+    border-radius: 5px;
+
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: rgb(212, 197, 179);
 }
