--- a/src/components/FirstTask/first-task.module.css
+++ b/src/components/FirstTask/first-task.module.css
@@ -1,7 +1,9 @@
 .app {
+
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
   height: 100%;
   background-color: #ccc5c5;
 }
