--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -14,9 +14,10 @@ justify-content: center;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 25px;width: 65px;
+  height: 25px;
+  width: 65px;
   padding: 5px 10px;
-  background-color: blueviolet;
+  background-color: rgb(108, 179, 178);
   border-radius: 5px;
   border: none;
   cursor: pointer;
@@ -25,6 +26,6 @@ justify-content: center;
 }
 
 .button:hover{
-  background-color: rgb(120, 88, 183);
-  color: silver;
+  background-color: rgb(220, 228, 162);
+  color: rgb(13, 129, 149);
 }
